Add global spinner before mount

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -23,6 +23,7 @@ $navbar-height: 40px;
 
 @import './_colors.scss';
 
+@import './_spinner.scss';
 @import './_scrollbars.scss';
 @import './_checkbox.scss';
 @import './_dragndrop.scss';
