Add notification capabilities

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -20,6 +20,7 @@ $navbar-height: 40px;
 
 @import '~bootstrap/scss/bootstrap';
 @import './_light.scss';
+@import './_notifications.scss';
 
 @import './_colors.scss';
 
