--- a/assets/scss/_notifications.scss
+++ b/assets/scss/_notifications.scss
@@ -3,7 +3,9 @@
   margin: 0 5px 5px;
   position: absolute;
   bottom: 0;
-  left: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
 
   font-size: 12px;
 
@@ -33,10 +35,14 @@
     0% {
       opacity: 0;
       transform: translateY(20px);
+      -webkit-transform: translateX(-50%);
+      transform: translateX(-50%);
     }
     100% {
       opacity: 1;
       transform: translateY(0);
+      -webkit-transform: translateX(-50%);
+      transform: translateX(-50%);
     }
   }
 }
